--- a/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0023.html
+++ b/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0023.html
@@ -1,16 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html>
   <head>
-    <meta name="ocr-id" value="abbyy" />
-    <meta name="ocr-recognized" value="lines text" />
-    <link rel="stylesheet" type="text/css" href="http://heml.mta.ca/Rigaudon/hocr.css" />
-    <meta http-equiv="content-type" content="application/xhtml+xml; charset=UTF-8" />
+    <meta name="ocr-id" value="abbyy"/>
+    <meta name="ocr-recognized" value="lines text"/>
+    <link rel="stylesheet" type="text/css" href="http://heml.mta.ca/Rigaudon/hocr.css"/>
+    <meta http-equiv="content-type" content="application/xhtml+xml; charset=UTF-8"/>
     <title>ocr</title>
   </head>
   <body>
     <div class="ocr_page" id="i0023.png">
-      <!--<div class="ocr_carea" title="bbox 164 174 1954 2932">-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 924 181 1937 219">
         <span id="w_0" class="ocr_word" title="bbox 924 182 1189 219">
           <span class="alternatives">
@@ -24,8 +22,6 @@
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 198 288 1937 347">
         <span id="w_2" class="ocr_word" title="bbox 198 292 466 338">
           <span class="alternatives">
@@ -77,7 +73,7 @@
         </span>
         <span id="w_10" class="ocr_word" title="bbox 1830 293 1855 343">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.95">§</ins>
+            <ins title="nlp 2.00">Cf.</ins>
           </span>
         </span>
         <span id="w_11" class="ocr_word" title="bbox 1881 291 1937 334">
@@ -111,9 +107,9 @@
             <del title="nlp 0.90">disputatio</del>
           </span>
         </span>
-        <span id="w_16" class="ocr_word" title="bbox 1042 361 1092 405" xml:lang="grc">
+        <span id="w_16" class="ocr_word" title="bbox 1042 361 1092 405" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.96">δ·</ins>
+            <ins title="nlp 2.00">de</ins>
           </span>
         </span>
         <span id="w_17" class="ocr_word" title="bbox 1123 364 1277 405">
@@ -142,17 +138,11 @@
         </span>
         <span id="w_21" class="ocr_word" title="bbox 1821 361 1939 405">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">indu-</ins>
+            <ins title="nlp 2.00">inducitur,</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 195 432 1937 493">
-        <span id="w_22" class="ocr_word" title="bbox 195 438 323 493">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">citur,</ins>
-            <del title="nlp 0.90">inducitur,</del>
-          </span>
-        </span>
         <span id="w_23" class="ocr_word" title="bbox 353 449 441 479">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">non</ins>
@@ -217,12 +207,12 @@
       <span class="ocr_line" title="bbox 193 504 1937 565">
         <span id="w_33" class="ocr_word" title="bbox 193 507 410 565">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">„medendi</ins>
+            <ins title="nlp 2.00">„medendi</ins>
           </span>
         </span>
         <span id="w_34" class="ocr_word" title="bbox 440 506 647 551">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">facultas"</ins>
+            <ins title="nlp 2.00">facultas"</ins>
           </span>
         </span>
         <span id="w_35" class="ocr_word" title="bbox 684 507 931 562">
@@ -319,17 +309,11 @@
         </span>
         <span id="w_50" class="ocr_word" title="bbox 1789 576 1937 620">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">funda-</ins>
+            <ins title="nlp 2.00">fundamento</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 193 648 1935 707">
-        <span id="w_51" class="ocr_word" title="bbox 193 655 336 696">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">mento</ins>
-            <del title="nlp 0.90">fundamento</del>
-          </span>
-        </span>
         <span id="w_52" class="ocr_word" title="bbox 368 652 434 695">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">sit.</ins>
@@ -350,12 +334,12 @@
         </span>
         <span id="w_55" class="ocr_word" title="bbox 792 652 818 705">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.95">§</ins>
+            <ins title="nlp 2.00">§</ins>
           </span>
         </span>
-        <span id="w_56" class="ocr_word" title="bbox 845 650 913 706" xml:lang="grc">
+        <span id="w_56" class="ocr_word" title="bbox 845 650 913 706" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">24ι</ins>
+            <ins title="nlp 2.00">24,</ins>
           </span>
         </span>
         <span id="w_57" class="ocr_word" title="bbox 940 650 996 693">
@@ -477,7 +461,7 @@
         </span>
         <span id="w_76" class="ocr_word" title="bbox 974 795 998 847">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.95">§</ins>
+            <ins title="nlp 2.00">§</ins>
           </span>
         </span>
         <span id="w_77" class="ocr_word" title="bbox 1026 793 1081 836">
@@ -497,9 +481,9 @@
             <del title="nlp 0.90">in</del>
           </span>
         </span>
-        <span id="w_80" class="ocr_word" title="bbox 1288 793 1342 846" xml:lang="grc">
+        <span id="w_80" class="ocr_word" title="bbox 1288 793 1342 846" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.95">κ</ins>
+            <ins title="nlp 2.00">§§</ins>
           </span>
         </span>
         <span id="w_81" class="ocr_word" title="bbox 1366 792 1434 835">
@@ -534,7 +518,7 @@
         </span>
         <span id="w_86" class="ocr_word" title="bbox 528 864 739 923">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">tractat.^)</ins>
+            <ins title="nlp 2.00">tractat.1)</ins>
           </span>
         </span>
         <span id="w_87" class="ocr_word" title="bbox 801 863 994 921">
@@ -791,14 +775,14 @@
             <del title="nlp 0.90">etiam</del>
           </span>
         </span>
-        <span id="w_128" class="ocr_word" title="bbox 1707 1163 1756 1192" xml:lang="grc">
+        <span id="w_128" class="ocr_word" title="bbox 1707 1163 1756 1192" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.98">·ο</ins>
+            <ins title="nlp 2.00">eo</ins>
           </span>
         </span>
         <span id="w_129" class="ocr_word" title="bbox 1783 1151 1934 1194">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">confir-</ins>
+            <ins title="nlp 2.00">confirmatur,</ins>
           </span>
         </span>
       </span>
@@ -829,7 +813,7 @@
         </span>
         <span id="w_134" class="ocr_word" title="bbox 682 1225 707 1277">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.95">§</ins>
+            <ins title="nlp 2.00">§</ins>
           </span>
         </span>
         <span id="w_135" class="ocr_word" title="bbox 728 1224 782 1266">
@@ -889,7 +873,7 @@
         </span>
         <span id="w_144" class="ocr_word" title="bbox 449 1296 474 1348">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.95">§</ins>
+            <ins title="nlp 2.00">§</ins>
           </span>
         </span>
         <span id="w_145" class="ocr_word" title="bbox 501 1295 555 1337">
@@ -923,7 +907,7 @@
         </span>
         <span id="w_150" class="ocr_word" title="bbox 1669 1295 1694 1346">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.95">§</ins>
+            <ins title="nlp 2.00">§</ins>
           </span>
         </span>
         <span id="w_151" class="ocr_word" title="bbox 1721 1292 1778 1336">
@@ -941,7 +925,7 @@
       <span class="ocr_line" title="bbox 187 1364 1931 1422">
         <span id="w_153" class="ocr_word" title="bbox 187 1364 296 1421">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">„Sed</ins>
+            <ins title="nlp 2.00">„Sed</ins>
           </span>
         </span>
         <span id="w_154" class="ocr_word" title="bbox 338 1367 483 1409">
@@ -1050,7 +1034,7 @@
         </span>
         <span id="w_171" class="ocr_word" title="bbox 1215 1435 1319 1479">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">etc."</ins>
+            <ins title="nlp 2.00">etc."</ins>
           </span>
         </span>
         <span id="w_172" class="ocr_word" title="bbox 1378 1435 1471 1479">
@@ -1273,7 +1257,7 @@
       <span class="ocr_line" title="bbox 185 1721 1929 1781">
         <span id="w_207" class="ocr_word" title="bbox 185 1721 230 1779">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">(§</ins>
+            <ins title="nlp 2.00">(§</ins>
           </span>
         </span>
         <span id="w_208" class="ocr_word" title="bbox 257 1724 312 1766">
@@ -1283,7 +1267,7 @@
         </span>
         <span id="w_209" class="ocr_word" title="bbox 314 1747 373 1754">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.95">—</ins>
+            <ins title="nlp 2.00">—</ins>
           </span>
         </span>
         <span id="w_210" class="ocr_word" title="bbox 375 1723 464 1781">
@@ -1415,7 +1399,7 @@
         </span>
         <span id="w_231" class="ocr_word" title="bbox 1834 1808 1930 1849">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">pro-</ins>
+            <ins title="nlp 2.00">probabile</ins>
           </span>
         </span>
       </span>
@@ -1638,17 +1622,11 @@
         </span>
         <span id="w_267" class="ocr_word" title="bbox 1770 2084 1929 2124">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">utram-</ins>
+            <ins title="nlp 2.00">utramque</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 184 2152 1928 2211">
-        <span id="w_268" class="ocr_word" title="bbox 184 2168 266 2210">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">que</ins>
-            <del title="nlp 0.90">utramque</del>
-          </span>
-        </span>
         <span id="w_269" class="ocr_word" title="bbox 298 2154 425 2197">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">simul</ins>
@@ -1699,17 +1677,11 @@
         </span>
         <span id="w_277" class="ocr_word" title="bbox 1772 2154 1928 2196">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">utrius-</ins>
+            <ins title="nlp 2.00">utramque</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 182 2225 1926 2282">
-        <span id="w_278" class="ocr_word" title="bbox 182 2239 264 2281">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">que</ins>
-            <del title="nlp 0.90">utriusque</del>
-          </span>
-        </span>
         <span id="w_279" class="ocr_word" title="bbox 295 2226 559 2282">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">quaestionis</ins>
@@ -1754,17 +1726,11 @@
         </span>
         <span id="w_286" class="ocr_word" title="bbox 1794 2225 1926 2281">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">expli-</ins>
+            <ins title="nlp 2.00">explicanda</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 183 2296 1924 2353">
-        <span id="w_287" class="ocr_word" title="bbox 183 2296 317 2340">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">canda</ins>
-            <del title="nlp 0.90">explicanda</del>
-          </span>
-        </span>
         <span id="w_288" class="ocr_word" title="bbox 347 2311 449 2340">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">esse.</ins>
@@ -1835,7 +1801,7 @@
         </span>
         <span id="w_299" class="ocr_word" title="bbox 477 2371 502 2423">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.95">§</ins>
+            <ins title="nlp 2.00">§</ins>
           </span>
         </span>
         <span id="w_300" class="ocr_word" title="bbox 529 2369 584 2413">
@@ -1881,17 +1847,11 @@
         </span>
         <span id="w_307" class="ocr_word" title="bbox 1834 2382 1926 2412">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">sen-</ins>
+            <ins title="nlp 2.00">sententiis</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 182 2438 1923 2499">
-        <span id="w_308" class="ocr_word" title="bbox 182 2440 328 2483">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">tentiis</ins>
-            <del title="nlp 0.90">sententiis</del>
-          </span>
-        </span>
         <span id="w_309" class="ocr_word" title="bbox 365 2440 550 2496">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">primum</ins>
@@ -1930,7 +1890,7 @@
         </span>
         <span id="w_315" class="ocr_word" title="bbox 1645 2438 1690 2498">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">(§</ins>
+            <ins title="nlp 2.00">(§</ins>
           </span>
         </span>
         <span id="w_316" class="ocr_word" title="bbox 1716 2440 1770 2482">
@@ -1940,7 +1900,7 @@
         </span>
         <span id="w_317" class="ocr_word" title="bbox 1774 2464 1832 2471">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.95">—</ins>
+            <ins title="nlp 2.00">—</ins>
           </span>
         </span>
         <span id="w_318" class="ocr_word" title="bbox 1834 2438 1923 2499">
@@ -1970,7 +1930,7 @@
         </span>
         <span id="w_322" class="ocr_word" title="bbox 600 2512 699 2567">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">„sed</ins>
+            <ins title="nlp 2.00">„sed</ins>
           </span>
         </span>
         <span id="w_323" class="ocr_word" title="bbox 731 2515 796 2556">
@@ -2049,7 +2009,7 @@
         </span>
         <span id="w_335" class="ocr_word" title="bbox 921 2583 1186 2641">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">viderimus,"</ins>
+            <ins title="nlp 2.00">viderimus,"</ins>
           </span>
         </span>
         <span id="w_336" class="ocr_word" title="bbox 1231 2584 1283 2627">
@@ -2086,7 +2046,7 @@
         </span>
         <span id="w_341" class="ocr_word" title="bbox 467 2657 491 2709">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.95">§</ins>
+            <ins title="nlp 2.00">§</ins>
           </span>
         </span>
         <span id="w_342" class="ocr_word" title="bbox 519 2656 572 2699">
@@ -2096,7 +2056,7 @@
         </span>
         <span id="w_343" class="ocr_word" title="bbox 578 2680 631 2687">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.95">—</ins>
+            <ins title="nlp 2.00">—</ins>
           </span>
         </span>
         <span id="w_344" class="ocr_word" title="bbox 636 2656 686 2699">
@@ -2112,7 +2072,7 @@
         </span>
         <span id="w_346" class="ocr_word" title="bbox 1007 2659 1032 2711">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.95">§</ins>
+            <ins title="nlp 2.00">§</ins>
           </span>
         </span>
         <span id="w_347" class="ocr_word" title="bbox 1059 2657 1114 2700">
@@ -2140,16 +2100,11 @@
         </span>
         <span id="w_351" class="ocr_word" title="bbox 1750 2655 1923 2699">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">reverti-</ins>
+            <ins title="nlp 2.00">revertitur.</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 180 2724 1920 2784">
-        <span id="w_352" class="ocr_word" title="bbox 180 2729 261 2769" xml:lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">Μ</ins>
-          </span>
-        </span>
         <span id="w_353" class="ocr_word" title="bbox 324 2724 486 2777">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">Quodsi</ins>
@@ -2317,10 +2272,6 @@
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--</div>-->
-      <!--<div class="ocr_carea" title="bbox 162 3046 1934 3218">-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 298 3057 1916 3106">
         <span id="w_380" class="ocr_word" title="bbox 298 3058 330 3103">
           <span class="alternatives">
@@ -2517,8 +2468,6 @@
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--</div>-->
     </div>
   </body>
 </html>
