--- a/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0024.html
+++ b/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0024.html
@@ -1,16 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html>
   <head>
-    <meta name="ocr-id" value="abbyy" />
-    <meta name="ocr-recognized" value="lines text" />
-    <link rel="stylesheet" type="text/css" href="http://heml.mta.ca/Rigaudon/hocr.css" />
-    <meta http-equiv="content-type" content="application/xhtml+xml; charset=UTF-8" />
+    <meta name="ocr-id" value="abbyy"/>
+    <meta name="ocr-recognized" value="lines text"/>
+    <link rel="stylesheet" type="text/css" href="http://heml.mta.ca/Rigaudon/hocr.css"/>
+    <meta http-equiv="content-type" content="application/xhtml+xml; charset=UTF-8"/>
     <title>ocr</title>
   </head>
   <body>
     <div class="ocr_page" id="i0024.png">
-      <!--<div class="ocr_carea" title="bbox 296 170 2086 3196">-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 311 177 1313 216">
         <span id="w_0" class="ocr_word" title="bbox 311 177 415 216">
           <span class="alternatives">
@@ -25,8 +23,6 @@
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 314 287 2044 346">
         <span id="w_2" class="ocr_word" title="bbox 314 302 483 343">
           <span class="alternatives">
@@ -128,17 +124,11 @@
         </span>
         <span id="w_18" class="ocr_word" title="bbox 1954 361 2045 404">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">dili-</ins>
+            <ins title="nlp 2.00">diligentius</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 314 428 2047 487">
-        <span id="w_19" class="ocr_word" title="bbox 314 429 486 487">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">gentius</ins>
-            <del title="nlp 0.90">diligentius</del>
-          </span>
-        </span>
         <span id="w_20" class="ocr_word" title="bbox 529 428 846 472">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">examinaveris.</ins>
@@ -157,9 +147,9 @@
             <del title="nlp 0.90">cum</del>
           </span>
         </span>
-        <span id="w_23" class="ocr_word" title="bbox 1194 432 1220 482" xml:lang="grc">
+        <span id="w_23" class="ocr_word" title="bbox 1194 432 1220 482" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.95">ξ</ins>
+            <ins title="nlp 2.00">§</ins>
           </span>
         </span>
         <span id="w_24" class="ocr_word" title="bbox 1244 430 1300 472">
@@ -175,7 +165,7 @@
         </span>
         <span id="w_26" class="ocr_word" title="bbox 1523 430 1690 485">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">„omnia</ins>
+            <ins title="nlp 2.00">„omnia</ins>
           </span>
         </span>
         <span id="w_27" class="ocr_word" title="bbox 1732 431 1865 474">
@@ -194,7 +184,7 @@
       <span class="ocr_line" title="bbox 314 501 2046 560">
         <span id="w_29" class="ocr_word" title="bbox 314 501 499 543">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">maiora"</ins>
+            <ins title="nlp 2.00">maiora"</ins>
           </span>
         </span>
         <span id="w_30" class="ocr_word" title="bbox 531 501 797 555">
@@ -241,17 +231,11 @@
         </span>
         <span id="w_37" class="ocr_word" title="bbox 1893 518 2046 560">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">augen-</ins>
+            <ins title="nlp 2.00">augendam</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 317 571 2047 629">
-        <span id="w_38" class="ocr_word" title="bbox 317 572 414 614">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">dam</ins>
-            <del title="nlp 0.90">augendam</del>
-          </span>
-        </span>
         <span id="w_39" class="ocr_word" title="bbox 449 571 756 629">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">aegritudinem</ins>
@@ -260,17 +244,17 @@
         </span>
         <span id="w_40" class="ocr_word" title="bbox 766 604 777 626">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.95">,</ins>
+            <ins title="nlp 2.00">,</ins>
           </span>
         </span>
-        <span id="w_41" class="ocr_word" title="bbox 808 573 834 624" xml:lang="grc">
+        <span id="w_41" class="ocr_word" title="bbox 808 573 834 624" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.95">ξ</ins>
+            <ins title="nlp 2.00">§</ins>
           </span>
         </span>
         <span id="w_42" class="ocr_word" title="bbox 859 572 915 614">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">5G</ins>
+            <ins title="nlp 2.00">56</ins>
           </span>
         </span>
         <span id="w_43" class="ocr_word" title="bbox 948 571 1207 614">
@@ -313,7 +297,7 @@
       <span class="ocr_line" title="bbox 316 642 2049 700">
         <span id="w_49" class="ocr_word" title="bbox 316 658 427 697">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">„non</ins>
+            <ins title="nlp 2.00">„non</ins>
           </span>
         </span>
         <span id="w_50" class="ocr_word" title="bbox 471 643 514 684">
@@ -372,17 +356,11 @@
         </span>
         <span id="w_59" class="ocr_word" title="bbox 1988 661 2049 688">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">re-</ins>
+            <ins title="nlp 2.00">recentia</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 317 713 2049 772">
-        <span id="w_60" class="ocr_word" title="bbox 317 714 457 756">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">centia</ins>
-            <del title="nlp 0.90">recentia</del>
-          </span>
-        </span>
         <span id="w_61" class="ocr_word" title="bbox 487 716 586 756">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">sunt</ins>
@@ -415,7 +393,7 @@
         </span>
         <span id="w_66" class="ocr_word" title="bbox 1310 715 1567 770">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">repentina."</ins>
+            <ins title="nlp 2.00">repentina."</ins>
           </span>
         </span>
         <span id="w_67" class="ocr_word" title="bbox 1626 715 1744 758">
@@ -563,13 +541,10 @@
       <span class="ocr_line" title="bbox 317 927 555 982">
         <span id="w_90" class="ocr_word" title="bbox 317 927 555 982">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">tellegatur.</ins>
-            <del title="nlp 0.90">intellegatur.</del>
+            <ins title="nlp 2.00">intellegatur.</ins>
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 438 996 2050 1054">
         <span id="w_91" class="ocr_word" title="bbox 438 996 521 1039">
           <span class="alternatives">
@@ -707,9 +682,9 @@
             <del title="nlp 0.90">locum</del>
           </span>
         </span>
-        <span id="w_113" class="ocr_word" title="bbox 587 1142 613 1193" xml:lang="grc">
+        <span id="w_113" class="ocr_word" title="bbox 587 1142 613 1193" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.95">ξ</ins>
+            <ins title="nlp 2.00">§</ins>
           </span>
         </span>
         <span id="w_114" class="ocr_word" title="bbox 639 1141 708 1195">
@@ -816,7 +791,7 @@
         </span>
         <span id="w_131" class="ocr_word" title="bbox 1786 1227 1897 1268">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">„non</ins>
+            <ins title="nlp 2.00">„non</ins>
           </span>
         </span>
         <span id="w_132" class="ocr_word" title="bbox 1933 1214 2050 1256">
@@ -877,7 +852,7 @@
         </span>
         <span id="w_141" class="ocr_word" title="bbox 1903 1285 2052 1340">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">malo",</ins>
+            <ins title="nlp 2.00">malo",</ins>
           </span>
         </span>
       </span>
@@ -902,7 +877,7 @@
         </span>
         <span id="w_145" class="ocr_word" title="bbox 924 1353 1029 1408">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">„Est</ins>
+            <ins title="nlp 2.00">„Est</ins>
           </span>
         </span>
         <span id="w_146" class="ocr_word" title="bbox 1075 1354 1118 1396">
@@ -1142,7 +1117,7 @@
         </span>
         <span id="w_184" class="ocr_word" title="bbox 1003 1638 1193 1681">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">videris."</ins>
+            <ins title="nlp 2.00">videris."</ins>
           </span>
         </span>
         <span id="w_185" class="ocr_word" title="bbox 1253 1637 1365 1681">
@@ -1285,7 +1260,7 @@
       <span class="ocr_line" title="bbox 325 1851 2060 1909">
         <span id="w_207" class="ocr_word" title="bbox 325 1851 545 1908">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">„Sciebam</ins>
+            <ins title="nlp 2.00">„Sciebam</ins>
           </span>
         </span>
         <span id="w_208" class="ocr_word" title="bbox 578 1867 645 1894">
@@ -1302,7 +1277,7 @@
         </span>
         <span id="w_210" class="ocr_word" title="bbox 904 1853 1165 1895">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">mortalem."</ins>
+            <ins title="nlp 2.00">mortalem."</ins>
           </span>
         </span>
         <span id="w_211" class="ocr_word" title="bbox 1226 1851 1332 1895">
@@ -1767,7 +1742,7 @@
             <del title="nlp 0.90">vocabulum</del>
           </span>
         </span>
-        <span id="w_286" class="ocr_word" title="bbox 1469 2351 1761 2406" xml:lang="grc">
+        <span id="w_286" class="ocr_word" title="bbox 1469 2351 1761 2406" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">προενδημεῖν</ins>
           </span>
@@ -1794,7 +1769,7 @@
         </span>
         <span id="w_290" class="ocr_word" title="bbox 626 2421 1021 2477">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">„praemeditandi"</ins>
+            <ins title="nlp 2.00">„praemeditandi"</ins>
           </span>
         </span>
         <span id="w_291" class="ocr_word" title="bbox 1069 2436 1172 2464">
@@ -1829,46 +1804,44 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 331 2491 2065 2550">
-        <span id="w_296" class="ocr_word" title="bbox 331 2494 555 2550" xml:lang="grc">
+        <span id="w_296" class="ocr_word" title="bbox 331 2494 555 2550" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">(βούλεται</ins>
+            <ins class="alt" title="nlp 1.00">βούλεται</ins>
           </span>
         </span>
-        <span id="w_297" class="ocr_word" title="bbox 588 2494 636 2536" xml:lang="grc">
+        <span id="w_297" class="ocr_word" title="bbox 588 2494 636 2536" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">δὲ</ins>
           </span>
         </span>
-        <span id="w_298" class="ocr_word" title="bbox 668 2494 716 2536" xml:lang="grc">
+        <span id="w_298" class="ocr_word" title="bbox 668 2494 716 2536" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τὸ</ins>
           </span>
         </span>
-        <span id="w_299" class="ocr_word" title="bbox 749 2493 1043 2548" xml:lang="grc">
+        <span id="w_299" class="ocr_word" title="bbox 749 2493 1043 2548" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.98">προενδημεΙν</ins>
-            <del title="nlp 0.90">προενδημεῖν</del>
+            <ins title="nlp 2.00">προενδημεῖν</ins>
           </span>
         </span>
-        <span id="w_300" class="ocr_word" title="bbox 1074 2498 1189 2548" xml:lang="grc">
+        <span id="w_300" class="ocr_word" title="bbox 1074 2498 1189 2548" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.99">ῥῆμα</ins>
-            <del title="nlp 0.90">ρ́ῆμα</del>
+            <ins title="nlp 2.00">ῥῆμα</ins>
           </span>
         </span>
-        <span id="w_301" class="ocr_word" title="bbox 1214 2498 1273 2535" xml:lang="grc">
+        <span id="w_301" class="ocr_word" title="bbox 1214 2498 1273 2535" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τῷ</ins>
           </span>
         </span>
-        <span id="w_302" class="ocr_word" title="bbox 1294 2493 1580 2535" xml:lang="grc">
+        <span id="w_302" class="ocr_word" title="bbox 1294 2493 1580 2535" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">Ποσειδωνίῳ</ins>
           </span>
         </span>
         <span id="w_303" class="ocr_word" title="bbox 1607 2491 1717 2549">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">etc),</ins>
+            <ins title="nlp 2.00">etc),</ins>
           </span>
         </span>
         <span id="w_304" class="ocr_word" title="bbox 1748 2494 1791 2534">
@@ -1885,17 +1858,11 @@
         </span>
         <span id="w_306" class="ocr_word" title="bbox 1891 2507 2065 2547">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">sequen-</ins>
+            <ins title="nlp 2.00">sequentibus</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 330 2561 2065 2621">
-        <span id="w_307" class="ocr_word" title="bbox 330 2566 445 2607">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">tibus</ins>
-            <del title="nlp 0.90">sequentibus</del>
-          </span>
-        </span>
         <span id="w_308" class="ocr_word" title="bbox 471 2563 530 2621">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">(p.</ins>
@@ -1931,22 +1898,22 @@
             <del title="nlp 0.90">pergat</del>
           </span>
         </span>
-        <span id="w_314" class="ocr_word" title="bbox 1365 2562 1455 2619" xml:lang="grc">
+        <span id="w_314" class="ocr_word" title="bbox 1365 2562 1455 2619" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">(καὶ</ins>
+            <ins class="alt" title="nlp 1.00">καὶ</ins>
           </span>
         </span>
-        <span id="w_315" class="ocr_word" title="bbox 1482 2563 1505 2606" xml:lang="grc">
+        <span id="w_315" class="ocr_word" title="bbox 1482 2563 1505 2606" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ὁ</ins>
           </span>
         </span>
-        <span id="w_316" class="ocr_word" title="bbox 1533 2567 1791 2619" xml:lang="grc">
+        <span id="w_316" class="ocr_word" title="bbox 1533 2567 1791 2619" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">Χρύσιππος</ins>
           </span>
         </span>
-        <span id="w_317" class="ocr_word" title="bbox 1820 2561 2065 2618" xml:lang="grc">
+        <span id="w_317" class="ocr_word" title="bbox 1820 2561 2065 2618" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">μαρτυρεῖ),</ins>
           </span>
@@ -2106,7 +2073,7 @@
             <del title="nlp 0.90">de</del>
           </span>
         </span>
-        <span id="w_343" class="ocr_word" title="bbox 760 2779 1055 2834" xml:lang="grc">
+        <span id="w_343" class="ocr_word" title="bbox 760 2779 1055 2834" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">προενδημεῖν</ins>
           </span>
@@ -2199,17 +2166,11 @@
         </span>
         <span id="w_358" class="ocr_word" title="bbox 1972 2861 2066 2902">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">pos-</ins>
+            <ins title="nlp 2.00">possunt</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 335 2919 2068 2976">
-        <span id="w_359" class="ocr_word" title="bbox 335 2923 435 2963">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">sunt</ins>
-            <del title="nlp 0.90">possunt</del>
-          </span>
-        </span>
         <span id="w_360" class="ocr_word" title="bbox 465 2920 617 2976">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">afferri,</ins>
@@ -2426,24 +2387,22 @@
             <del title="nlp 0.90">pro</del>
           </span>
         </span>
-        <span id="w_395" class="ocr_word" title="bbox 1673 3131 1746 3176" xml:lang="grc">
+        <span id="w_395" class="ocr_word" title="bbox 1673 3131 1746 3176" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">καὶ</ins>
           </span>
         </span>
-        <span id="w_396" class="ocr_word" title="bbox 1769 3131 1791 3175" xml:lang="grc">
+        <span id="w_396" class="ocr_word" title="bbox 1769 3131 1791 3175" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ὁ</ins>
           </span>
         </span>
-        <span id="w_397" class="ocr_word" title="bbox 1813 3134 2069 3189" xml:lang="grc">
+        <span id="w_397" class="ocr_word" title="bbox 1813 3134 2069 3189" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">Χρύσιππος</ins>
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--</div>-->
     </div>
   </body>
 </html>
