--- a/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0168.html
+++ b/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0168.html
@@ -173,16 +173,11 @@
         </span>
         <span id="w_31" class="ocr_word" title="bbox 1891 457 2056 501" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.98">ἐπιδια-</ins>
+            <ins title="nlp 2.00">ἐπιδιαμένειν</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 324 526 2058 587">
-        <span id="w_32" class="ocr_word" title="bbox 324 546 472 584" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">μένειν</ins>
-          </span>
-        </span>
         <span id="w_33" class="ocr_word" title="bbox 516 529 624 587">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">(scil.</ins>
@@ -1583,7 +1578,7 @@
         </span>
         <span id="w_287" class="ocr_word" title="bbox 1982 2633 2069 2662">
           <span class="alternatives">
-            <ins title="nlp 2.00">mu τὰς</ins>
+            <ins title="nlp 2.00">mu - τὰς</ins>
           </span>
         </span>
       </span>
